--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "TransferNews",
+  "name": "irfizio-bot",
   "version": "1.0.0",
+  "type": "module",
   "main": "bot.js",
-  "license": "MIT",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
     "discord.js": "^14.14.1",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.2"
-  },
-  "type": "module"
+  }
 }
